# mcp-ui-python-server

./: .gitignore  Dockerfile  README.md  claude_desktop_config.example.json  docker-compose.yml  pyproject.toml  server.py
