[project]
name = "mcp-ui-python-server"
version = "0.1.0"
description = "Python MCP server with MCP-UI resources (interactive UI over MCP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "mcp-ui-server>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]
